[gd_scene load_steps=8 format=2]

[ext_resource path="res://elements/sequencer/Sequencer8.gd" type="Script" id=1]
[ext_resource path="res://elements/sequencer/sequencer_two.svg" type="Texture" id=2]
[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/switch/Switch.tscn" type="PackedScene" id=4]
[ext_resource path="res://elements/switch/SwitchLED.tscn" type="PackedScene" id=5]
[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 103 )

[node name="Sequencer8" type="Node2D"]
script = ExtResource( 1 )

[node name="sequencer" type="Sprite" parent="."]
position = Vector2( 350, 105 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="JackIn" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.91829, 175 )

[node name="OutJack" parent="." instance=ExtResource( 3 )]
position = Vector2( 698, 175 )
rotation = -3.14159
is_input = false

[node name="OutJack2" parent="." instance=ExtResource( 3 )]
position = Vector2( 698, 105 )
rotation = -3.14159
is_input = false

[node name="OutJack3" parent="." instance=ExtResource( 3 )]
position = Vector2( 698, 35 )
rotation = -3.14159
is_input = false

[node name="Switch" parent="." instance=ExtResource( 4 )]
position = Vector2( 52.4178, 65.1824 )

[node name="Switch2" parent="." instance=ExtResource( 4 )]
position = Vector2( 112.418, 65.1826 )

[node name="Switch3" parent="." instance=ExtResource( 4 )]
position = Vector2( 172.418, 65.1824 )

[node name="Switch4" parent="." instance=ExtResource( 4 )]
position = Vector2( 232.418, 65.1826 )

[node name="Switch5" parent="." instance=ExtResource( 4 )]
position = Vector2( 292.418, 65.1826 )

[node name="Switch6" parent="." instance=ExtResource( 4 )]
position = Vector2( 352.418, 65.1826 )

[node name="Switch7" parent="." instance=ExtResource( 4 )]
position = Vector2( 412.418, 65.1826 )

[node name="Switch8" parent="." instance=ExtResource( 4 )]
position = Vector2( 472.418, 65.1826 )

[node name="SwitchLED" parent="." instance=ExtResource( 5 )]
position = Vector2( 52.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED2" parent="." instance=ExtResource( 5 )]
position = Vector2( 112.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED3" parent="." instance=ExtResource( 5 )]
position = Vector2( 172.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED4" parent="." instance=ExtResource( 5 )]
position = Vector2( 232.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED5" parent="." instance=ExtResource( 5 )]
position = Vector2( 292.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED6" parent="." instance=ExtResource( 5 )]
position = Vector2( 352.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED7" parent="." instance=ExtResource( 5 )]
position = Vector2( 412.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED8" parent="." instance=ExtResource( 5 )]
position = Vector2( 472.418, 140.503 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED9" parent="." instance=ExtResource( 5 )]
position = Vector2( 52.418, 171.616 )
off_color = Color( 0, 0.309804, 0.0352941, 1 )
on_color = Color( 0, 0.839216, 0.129412, 1 )

[node name="SwitchLED10" parent="." instance=ExtResource( 5 )]
position = Vector2( 112.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED11" parent="." instance=ExtResource( 5 )]
position = Vector2( 172.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED12" parent="." instance=ExtResource( 5 )]
position = Vector2( 232.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED13" parent="." instance=ExtResource( 5 )]
position = Vector2( 292.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED14" parent="." instance=ExtResource( 5 )]
position = Vector2( 352.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED15" parent="." instance=ExtResource( 5 )]
position = Vector2( 412.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="SwitchLED16" parent="." instance=ExtResource( 5 )]
position = Vector2( 472.418, 171.616 )
off_color = Color( 0.333333, 0, 0, 1 )
on_color = Color( 1, 0, 0, 1 )

[node name="ModuleDragger" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
visible = false
position = Vector2( 350, 105 )
shape = SubResource( 1 )
